[package]
name = "aoc-bud"
version = "0.0.2"
edition = "2021"

authors = ["no0bie"]
description = "A advent of code rust helper"

include = ["**/*.rs", "Cargo.toml"]

repository = "https://github.com/no0bie/aoc-bud"
readme = "README.md"

license = "MIT"

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
reqwest = {version = "0.11.13", features = ["blocking"]}
scraper = "0.13.0"
