[package]
name = "aoc-bud"
version = "0.0.4"
edition = "2021"

authors = ["no0bie"]
description = "A advent of code rust helper"

include = ["**/*.rs", "Cargo.toml"]

repository = "https://github.com/no0bie/aoc-bud"
readme = "README.md"

license = "MIT"

[dependencies]
dotenv = "0.15.0"
native-tls = "0.2.11"
regex = "1.10.2"
time = { version = "0.3.30", features = ["macros"], optional = true}

[features]
time = ["dep:time"]
